--- a/cap1.tex
+++ b/cap1.tex
@@ -145,7 +145,7 @@ O CRISP-DM consiste em seis fases destinadas a um processo cíclico (Figura ~\re
 \textbf{Implantação}: A mineração de dados pode ser usada para validar hipóteses anteriormente \fj{realizadas}{levantadas} ou para descoberta de conhecimento, como identificação de relacionamentos inesperados e úteis. Por meio do conhecimento encontrado nas fases anteriores do processo, os resultados ou modelos obtidos podem então serem apresentados aos \textit{stakeholders} e, então, aplicados para vários propósitos. As apresentações devem ser realizadas de forma a ajudar o \textit{stakeholder} alvo a entender, interpretar e agir sobre os resultados da mineração de dados, isso pode ser feito usando uma representação do conhecimento, como uma visualização ou relatório. Por exemplo, um analista de dados telemétricos de jogos poderia desenvolver uma visualização de \textit{heatmap} a partir dos registros de localização dos jogadores em um mapa de um jogo para apresentar ao líder de \textit{designer} do jogo, que por sua vez, poderia ter algum \textit{insight} inovador em relação ao mapa. Os resultados ou modelos precisam ser monitorados quanto  {\`a}s mudanças nas condições operacionais, porque o que pode ser verdade hoje pode não ser verdade no ano a partir desse instante. Se ocorrerem alterações significativas, o processo deve ser refeito. Também é aconselhável registrar os resultados dos projetos de mineração de dados, de modo que as evidências documentadas estejam disponíveis para estudos futuros.
 
 \end{itemize}
-O processo CRISP-DM em seis fases não é rígido, por meio de um procedimento exato. Geralmente, há uma grande quantidade de \textit{backtracking}. Além disso, analistas experientes podem não precisar aplicar todas as fases para um problema específico. Portanto, esse processo fornece um \textit{framework} útil para a mineração de dados.
+O processo CRISP-DM em seis fases não é rígido, por meio de um procedimento exato. Geralmente, há uma grande quantidade de retrocesso. Além disso, analistas experientes podem não precisar aplicar todas as fases para um problema específico. Portanto, esse processo fornece um \textit{framework} útil para a mineração de dados.
 
 \subsection{Preparação dos Dados}
 O formato bruto dos dados geralmente é amplamente variável. Muitos valores podem estar faltando, inconsistentes em diferentes fontes de dados e errôneos. Para o analista, isso leva a inúmeros desafios na utilização eficiente dos dados. Por exemplo, considere o caso de avaliar os interesses dos consumidores a partir de suas atividades em um site de redes sociais. O analista pode primeiro determinar os tipos de atividades que são valiosos para o processo de mineração. A atividade pode corresponder aos interesses inseridos pelo usuário, aos comentários inseridos pelo usuário e ao conjunto de amizades do usuário junto com seus interesses. Todas essas informações são diversas e precisam ser coletadas de diferentes bancos de dados no site de redes sociais. Além disso, algumas formas de dados, como \textit{logs} brutos, muitas vezes não podem ser diretamente usados devido à sua natureza não estruturada. Em outras palavras, características importantes precisam ser extraídas dessas fontes de dados. Por isso existe a necessidade da fase de preparação dos dados.
