change heatmap to mapa de calor

--- a/cap1.tex
+++ b/cap1.tex
@@ -142,7 +142,7 @@ O CRISP-DM consiste em seis fases destinadas a um processo cíclico (Figura ~\re
   \item
 \textbf{Avaliação}: Os resultados ou modelos devem ser avaliados conforme os objetivos de negócios definidos na fase de compreensão do negócio. Isso pode levar à identificação de outras necessidades, frequentemente retornando às fases anteriores. A obtenção de entendimento do negócio é um procedimento iterativo na mineração de dados, onde os resultados de várias ferramentas de visualização, estatística e IA mostram os novos relacionamentos que proporcionam uma compreensão mais profunda das operações organizacionais.
   \item
-\textbf{Implantação}: A mineração de dados pode ser usada para validar hipóteses anteriormente \fj{realizadas}{levantadas} ou para descoberta de conhecimento, como identificação de relacionamentos inesperados e úteis. Por meio do conhecimento encontrado nas fases anteriores do processo, os resultados ou modelos obtidos podem então serem apresentados aos \textit{stakeholders} e, então, aplicados para vários propósitos. As apresentações devem ser realizadas de forma a ajudar o \textit{stakeholder} alvo a entender, interpretar e agir sobre os resultados da mineração de dados, isso pode ser feito usando uma representação do conhecimento, como uma visualização ou relatório. Por exemplo, um analista de dados telemétricos de jogos poderia desenvolver uma visualização de \textit{heatmap} a partir dos registros de localização dos jogadores em um mapa de um jogo para apresentar ao líder de \textit{designer} do jogo, que por sua vez, poderia ter algum \textit{insight} inovador em relação ao mapa. Os resultados ou modelos precisam ser monitorados quanto  {\`a}s mudanças nas condições operacionais, porque o que pode ser verdade hoje pode não ser verdade no ano a partir desse instante. Se ocorrerem alterações significativas, o processo deve ser refeito. Também é aconselhável registrar os resultados dos projetos de mineração de dados, de modo que as evidências documentadas estejam disponíveis para estudos futuros.
+\textbf{Implantação}: A mineração de dados pode ser usada para validar hipóteses anteriormente \fj{realizadas}{levantadas} ou para descoberta de conhecimento, como identificação de relacionamentos inesperados e úteis. Por meio do conhecimento encontrado nas fases anteriores do processo, os resultados ou modelos obtidos podem então serem apresentados aos \textit{stakeholders} e, então, aplicados para vários propósitos. As apresentações devem ser realizadas de forma a ajudar o \textit{stakeholder} alvo a entender, interpretar e agir sobre os resultados da mineração de dados, isso pode ser feito usando uma representação do conhecimento, como uma visualização ou relatório. Por exemplo, um analista de dados telemétricos de jogos poderia desenvolver uma visualização de mapa de calor a partir dos registros de localização dos jogadores em um mapa de um jogo para apresentar ao líder de \textit{designer} do jogo, que por sua vez, poderia ter algum \textit{insight} inovador em relação ao mapa. Os resultados ou modelos precisam ser monitorados quanto  {\`a}s mudanças nas condições operacionais, porque o que pode ser verdade hoje pode não ser verdade no ano a partir desse instante. Se ocorrerem alterações significativas, o processo deve ser refeito. Também é aconselhável registrar os resultados dos projetos de mineração de dados, de modo que as evidências documentadas estejam disponíveis para estudos futuros.
 
 \end{itemize}
 O processo CRISP-DM em seis fases não é rígido, por meio de um procedimento exato. Geralmente, há uma grande quantidade de retrocesso. Além disso, analistas experientes podem não precisar aplicar todas as fases para um problema específico. Portanto, esse processo fornece um \textit{framework} útil para a mineração de dados.
