add footnote explaining stakeholder term

--- a/cap1.tex
+++ b/cap1.tex
@@ -43,7 +43,7 @@ Esta dissertação tem como objetivo \fj{apresentar e discutir os resultados de 
 \section{Contribuições}
 Acreditamos que este trabalho resultou em uma importante contribuição \fj{ao unir o tema}{ao estudar o} comportamento de usuários \fj{aos}{no contexto dos} jogos MOBA. Esses jogos possuem uma crescente popularidade e uma série de aspectos a serem estudados. Até onde sabemos, ainda existe uma escassez de trabalhos acadêmicos que os exploram \cite{drachen2014skill} \cite{ong2015player}, especialmente em relação ao comportamento de jogadores e equipes em LoL.
 
-Podemos identificar ao menos três classes principais de \textit{\fj{stackholders}{stakeholder}} para as quais os resultados desta pesquisa são relevantes. Primeiro, a comunidade de mineração de dados, pois este trabalho representa um domínio novo e ainda pouco explorado. Em segundo lugar, a indústria de jogos digitais que pode se beneficiar dos modelos descritivos \fj{e preditivos}{} desenvolvidos para compreender melhor os jogadores e as equipes e, assim, fornecer ferramentas automáticas para melhorar a experiência de jogo. Finalmente, jogadores e equipes inexperientes que podem se beneficiar das informações obtidas a partir dos perfis de equipes bem-sucedidas e malsucedidas para apoiar suas decisões e, assim, melhorar suas habilidades, tornando o jogo ainda mais divertido.
+Podemos identificar ao menos três classes principais de \textit{\fj{stackholders}{stakeholder}} \footnote{Uma pessoa ou organização com interesse ou preocupação em algo, especialmente um negócio.} para as quais os resultados desta pesquisa são relevantes. Primeiro, a comunidade de mineração de dados, pois este trabalho representa um domínio novo e ainda pouco explorado. Em segundo lugar, a indústria de jogos digitais que pode se beneficiar dos modelos descritivos \fj{e preditivos}{} desenvolvidos para compreender melhor os jogadores e as equipes e, assim, fornecer ferramentas automáticas para melhorar a experiência de jogo. Finalmente, jogadores e equipes inexperientes que podem se beneficiar das informações obtidas a partir dos perfis de equipes bem-sucedidas e malsucedidas para apoiar suas decisões e, assim, melhorar suas habilidades, tornando o jogo ainda mais divertido.
 
 Por fim, este trabalho também resultou na aceitação do artigo científico "\textit{Profiling Successful Team Behaviors in League of Legends}" no XXIII Simpósio Brasileiro de Sistemas Multimídia e Web (WebMedia 2017) \fj{}{, que possui classifica\c{c}\~ao \textit{qualis} B2}. Nesta disserta\c{c}\~{a}o, foram abordados os temas e experimentos aqui tratados, sendo este trabalho uma extensão mais aprofundada do artigo.
 
