--- a/main_mestrado.tex
+++ b/main_mestrado.tex
@@ -183,7 +183,7 @@ showstringspaces=false
 %% BIbliografia
 %% Coloque suas referencias no arquivo ref.bib e descomente as proximas duas linhas
 
-\bibliographystyle{plain} % estilo de bibliografia   plain,unsrt,alpha,abbrv.
+\bibliographystyle{unsrt} % estilo de bibliografia   plain,unsrt,alpha,abbrv.
 \bibliography{ref} % arquivos com as entradas bib.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
